--- a/index.html
+++ b/index.html
@@ -316,117 +316,89 @@
     <div class="movie-scroll-view">
       <!-- Movie 1 -->
       <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
-
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
 
       <!-- movie 2 -->
       <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
-
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
 
       <!-- Movie 3 -->
-      <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
-
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
+    <div class="movie-container">
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
 
       <!-- Movie 4 -->
-      <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
-
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
+     <div class="movie-container">
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
 
       <!-- Movie 5 -->
       <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
 
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
+    <div class="movie-container">
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
 
-      <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
+     <div class="movie-container">
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
 
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
+  <div class="movie-container">
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
 
-      <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
-
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
-
-
-      <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
-
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
-
-      <div class="movie-container">
-        <div class="movie-poster">
-          <img src="./assets/posters/matrix.webp" alt="" />
-        </div>
-
-        <div class="movie-title">The Matrix</div>
-        <div class="movie-details">
-          <div class="movie-year">2023</div>
-          <div class="movie-rating">7.5</div>
-        </div>
-      </div>
+   <div class="movie-container">
+  <div class="movie-poster skeleton"></div>
+  <div class="movie-title skeleton"></div>
+  <div class="movie-details">
+    <div class="movie-year skeleton"></div>
+    <div class="movie-rating skeleton"></div>
+  </div>
+</div>
     </div>
     </div>
   </section>
