--- a/index.html
+++ b/index.html
@@ -403,6 +403,6 @@
     </div>
   </section>
 </body>
-<script src="index.js" type="module"></script>
+<script src="./scripts/index.js" type="module"></script>
 
 </html>
