--- a/details.html
+++ b/details.html
@@ -35,20 +35,18 @@
 
     <button class="back-button"><i class="fa-solid fa-arrow-left"></i></button>
     <section class="single-movie-container">
-      <div class="single-movie-title">Thudarum</div>
-      <div class="single-movie-year">2025</div>
-      <div class="single-movie-poster">
-        <img src="../assets/image.png" alt="" />
-      </div>
+      <div class="single-movie-title skeleton"></div>
+      <div class="single-movie-year skeleton"></div>
+      <div class="single-movie-poster skeleton"></div>
 
       <div class="single-movie-detail">
         <div>
-          <div class="single-movie-language">Malayalam</div>
-          <div class="single-movie-genre">Crime/Triller</div>
+          <div class="single-movie-language skeleton"></div>
+          <div class="single-movie-genre skeleton"></div>
         </div>
-        <div class="single-movie-rating">
-          <i class="fa-solid fa-star movie-star"></i>
-          <span>7.8</span>
+        <div class="single-movie-rating skeleton">
+          <!-- <i class="fa-solid fa-star movie-star"></i> -->
+          <span></span>
         </div>
       </div>
 
