--- a/index.html
+++ b/index.html
@@ -26,6 +26,142 @@
       </button>
     </div>
   </nav>
+  <!-- search result box --> 
+  <section class="search-result-box js-search-result-box">
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+<div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+    <div class="result-container">
+      <div class="result-movie-poster ">
+
+        <img src="./assets/image.png" alt="">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title ">Thudarum</div>
+        <div class="result-movie-year">2025</div>
+        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+      </div>
+    </div>
+
+  </section>
+
+
 
   <section class="main-grid ">
     <div class="main-grid-title">Populars</div>
@@ -316,93 +452,94 @@
     <div class="movie-scroll-view">
       <!-- Movie 1 -->
       <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
 
       <!-- movie 2 -->
       <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
 
       <!-- Movie 3 -->
-    <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
 
       <!-- Movie 4 -->
-     <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
 
       <!-- Movie 5 -->
       <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
 
-    <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
 
-     <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
 
-  <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
 
-   <div class="movie-container">
-  <div class="movie-poster skeleton"></div>
-  <div class="movie-title skeleton"></div>
-  <div class="movie-details">
-    <div class="movie-year skeleton"></div>
-    <div class="movie-rating skeleton"></div>
-  </div>
-</div>
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
     </div>
     </div>
   </section>
 </body>
 <script src="./scripts/index.js" type="module"></script>
+
 
 </html>
