--- a/details.html
+++ b/details.html
@@ -72,5 +72,5 @@
       </div>
     </section>
   </body>
-  <script type="module" src="../scripts/details.js"></script>
+  <script type="module" src="./scripts/details.js"></script>
 </html>
