search feature established

--- a/index.html
+++ b/index.html
@@ -21,24 +21,14 @@
     <div class="navbar-search-box">
       <input placeholder="Search for Movies" class="navbar-search-input" type="text" />
 
-      <button class="navbar-search-button">
+      <button class="navbar-search-button js-navbar-button">
         <i class="fa-solid fa-magnifying-glass"></i>
       </button>
     </div>
   </nav>
   <!-- search result box --> 
   <section class="search-result-box js-search-result-box">
-    <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
-      </div>
-      <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
-      </div>
-    </div>
+    
 
     <div class="result-container">
       <div class="result-movie-poster ">
