shadow screen skelton added for search results

--- a/details.html
+++ b/details.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./style/style.css" />
     <link rel="stylesheet" href="./style/details.css" />
   </head>
+
   <body bgcolor="#00001">
     <nav class="navbar">
       <div class="logo">CineQuest</div>
@@ -27,11 +28,103 @@
           type="text"
         />
 
-        <button class="navbar-search-button">
+        <button class="navbar-search-button js-navbar-button">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </div>
     </nav>
+
+    <!-- search result box -->
+    <section class="search-result-box js-search-result-box">
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="result-container">
+        <div class="result-movie-poster skeleton"></div>
+        <div class="result-movie-details">
+          <div class="result-movie-title skeleton"></div>
+          <div class="result-movie-year skeleton"></div>
+          <div class="result-movie-rating skeleton"></div>
+        </div>
+      </div>
+    </section>
 
     <button class="back-button"><i class="fa-solid fa-arrow-left"></i></button>
     <section class="single-movie-container">
@@ -51,25 +144,19 @@
       </div>
 
       <div class="single-movie-desc-box">
-        <span>Description</span>
-        <p class="single-movie-desc">
-          his is triller movie with type of data called with new main features
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus,
-          distinctio Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Pariatur deserunt nihil aspernatur harum rerum, incidunt distinctio
-          cumque quam eveniet repellendus!
-        </p>
+        <div class="skeleton"></div>
+        <p class="single-movie-desc skeleton"></p>
       </div>
 
-      <span class="single-movie-cast-title">Cast</span>
-      <div class="single-movie-cast-box">
-        <div class="cast-box">
-          <div class="cast-img-box">
-            <img src="../components/image.png" alt="" />
-          </div>
-          <div class="cast-name">Mohanlal</div>
+      <!-- <span class="single-movie-cast-title">Cast</span>
+    <div class="single-movie-cast-box">
+      <div class="cast-box">
+        <div class="cast-img-box">
+          <img src="../components/image.png" alt="" />
         </div>
+        <div class="cast-name">Mohanlal</div>
       </div>
+    </div> -->
     </section>
   </body>
   <script type="module" src="./scripts/details.js"></script>
