--- a/index.html
+++ b/index.html
@@ -26,126 +26,106 @@
       </button>
     </div>
   </nav>
-  <!-- search result box --> 
+  <!-- search result box -->
   <section class="search-result-box js-search-result-box">
-    
+
 
     <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
+      <div class="result-movie-poster skeleton">
       </div>
       <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
-      </div>
-    </div>
-<div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
-      </div>
-      <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
       </div>
     </div>
 
-    <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
+      <div class="result-container">
+      <div class="result-movie-poster skeleton">
       </div>
       <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
       </div>
     </div>
 
-    <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
+      <div class="result-container">
+      <div class="result-movie-poster skeleton">
       </div>
       <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
+      </div>
+    </div>
+      <div class="result-container">
+      <div class="result-movie-poster skeleton">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
       </div>
     </div>
 
-    <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
+      <div class="result-container">
+      <div class="result-movie-poster skeleton">
       </div>
       <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
       </div>
     </div>
 
-    <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
+     <div class="result-container">
+      <div class="result-movie-poster skeleton">
       </div>
       <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
       </div>
     </div>
 
-    <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
+      <div class="result-container">
+      <div class="result-movie-poster skeleton">
       </div>
       <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
+      </div>
+    </div>
+
+     <div class="result-container">
+      <div class="result-movie-poster skeleton">
+      </div>
+      <div class="result-movie-details">
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
       </div>
     </div>
 
     <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
+      <div class="result-movie-poster skeleton">
       </div>
       <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
       </div>
     </div>
 
-    <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
+      <div class="result-container">
+      <div class="result-movie-poster skeleton">
       </div>
       <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
-      </div>
-    </div>
-
-    <div class="result-container">
-      <div class="result-movie-poster ">
-
-        <img src="./assets/image.png" alt="">
-      </div>
-      <div class="result-movie-details">
-        <div class="result-movie-title ">Thudarum</div>
-        <div class="result-movie-year">2025</div>
-        <div class="result-movie-rating"> <i class="fa-solid fa-star movie-star"></i>8.7</div>
+        <div class="result-movie-title skeleton "></div>
+        <div class="result-movie-year skeleton"></div>
+        <div class="result-movie-rating skeleton"></div>
       </div>
     </div>
 
