--- a/index.html
+++ b/index.html
@@ -226,6 +226,99 @@
     </div>
   </section>
 
+  <section class="main-grid ">
+    <div class="main-grid-title">Top Rated</div>
+    <div class="movie-scroll-view js-top-rated-main-grid">
+      <!-- Movie 1 -->
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+      <!-- movie 2 -->
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <!-- Movie 3 -->
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <!-- Movie 4 -->
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <!-- Movie 5 -->
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+
+
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+
+      <div class="movie-container">
+        <div class="movie-poster skeleton"></div>
+        <div class="movie-title skeleton"></div>
+        <div class="movie-details">
+          <div class="movie-year skeleton"></div>
+          <div class="movie-rating skeleton"></div>
+        </div>
+      </div>
+    </div>
+    </div>
+    </div>
+  </section>
+
 
 
   <!-- Now playing  -->
