--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
       </button>
     </div>
   </nav>
+  <div class="selector-box">
+    <li>Feel good</li>
+    <li>Action</li>
+    <li>Trillers</li>
+    <li>Horror</li>
+    <li>Fantasy</li>
+    <li>Adventure</li>
+    <li>Drama</li>
+    <li>Comdey</li>
+  </div>
   <!-- search result box -->
   <section class="search-result-box js-search-result-box">
 
